--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p class="intro">autodidact, with a can-do attitude</p>
                     </div>
                     <div class="row justify-content-around">
-                        <a href="#contact-section" class="btn">reach out to me!</a>
+                        <button type="button" href="#contact-section" class="btn btn-secondary">reach out to me!</a>
                     </div>
                 </div>
                 <div class="col-4">
@@ -202,8 +202,8 @@
         <div class="seperator"></div>
 
         <div class="container-fluid overflow-hidden">
-            <div class="row gy-5">
-                <div class="p-3 col-6">
+            <div class="row justify-content-center">
+                <div class="col-6">
                     <p class="contact-paragraph">
                     <p class="bi bi-envelope">
                         <a href="mailto:jonathankylebrooks@gmail.com"
@@ -219,9 +219,9 @@
                             class="social-link">LinkedIn.com/Jonathankyle-brooks</a>
                     </p>
                 </div>
-                <div class="p-3 col-3">
+                <div class="col-3">
 
-                    <img src="assets\images\contact.jpg" class="contact-image">
+                    <img src="assets\images\contact.jpg" class="img-fluid">
                 </div>
             </div>
 
