--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-around">
-                        <p class="profession">jr. full-stack web developer</p>
-                    </div>
+
                     <div class="row justify-content-around">
                         <p class="intro">autodidact, with a can-do attitude</p>
                     </div>
@@ -56,9 +54,12 @@
                     </div>
                 </div>
                 <div class="col-4">
-
-
-                    <img src="assets\images\profilePic.jpg" class="rounded img-fluid " alt="my face">
+                    <div class="self-portrait-container">
+                        <img src="assets\images\profilePic.jpg" class="rounded img-fluid" alt="my face">
+                    </div>
+                    <div class="row justify-content-around">
+                        <p class="profession">jr. full-stack web developer</p>
+                    </div>
 
                 </div>
             </div>
@@ -98,11 +99,13 @@
             </div>
         </div>
 
-        <div class="row align-items-center">
-            <div class="video-wrapper">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A4k_O5v0sug"
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+        <div class="row">
+            <div class="col align-self-center">
+                <div class="video-wrapper">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A4k_O5v0sug"
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                 clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
 
         </div>
