--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <p class="sub-heading">Here is a sample of some of my current projects</p>
         <div class="seperator"></div>
         <div class="projects-container">
-            <a href="projects\projects.html" class="projects-btn">Check out my projects!</a>
+            <a aria-label="Button link to my projects" href="projects\projects.html" class="projects-btn">Check out my projects!</a>
         </div>
     </section>
 
