--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
         <div class="row">
             <div class="col align-self-center">
                 <div class="video-wrapper">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A4k_O5v0sug"
-                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/A4k_O5v0sug"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
 
@@ -198,7 +199,8 @@
         <p class="sub-heading">Here is a sample of some of my current projects</p>
         <div class="seperator"></div>
         <div class="projects-container">
-            <a aria-label="Button link to my projects" href="projects\projects.html" class="projects-btn">Check out my projects!</a>
+            <a aria-label="Button link to my projects" href="projects\projects.html" class="projects-btn">Check out my
+                projects!</a>
         </div>
     </section>
 
