--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 </div>
 
             </div>
+
         </div>
 
         <div class="row">
@@ -109,7 +110,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/A4k_O5v0sug"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                        allowfullscreen modestbranding></iframe>
                 </div>
             </div>
 
